--- a/templates/problem.html
+++ b/templates/problem.html
@@ -55,7 +55,16 @@
         {{ problem.description | markdown }}
     </div>
 
-    {% if is_admin %}
+    {% if current_user and current_user.id == problem.user_id %}
+    <div class="admin-actions">
+        <a href="{{ url_for('edit_problem', id=problem.id) }}" class="btn-small">Edit Problem</a>
+        {% if is_admin %}
+        <form action="{{ url_for('admin_delete_problem', id=problem.id) }}" method="POST" class="inline" onsubmit="return confirm('Are you sure you want to delete this problem? This cannot be undone.');">
+            <button type="submit" class="btn-small btn-danger">Delete Problem</button>
+        </form>
+        {% endif %}
+    </div>
+    {% elif is_admin %}
     <div class="admin-actions">
         <a href="{{ url_for('admin_edit_problem', id=problem.id) }}" class="btn-small">Edit Problem</a>
         <form action="{{ url_for('admin_delete_problem', id=problem.id) }}" method="POST" class="inline" onsubmit="return confirm('Are you sure you want to delete this problem? This cannot be undone.');">
